# git-memory-mcp-server

./: .env.example  .env.figma.example  .env.google  .env.production  .env.security.example  .eslintrc.js  .git-memory.json  .gitignore  .npmignore  .prettierrc  AGENCY_DOCUMENTATION.md  AI_TOOLS_INTEGRATION_GUIDE.md  API_DOCUMENTATION.md  ARCHITECTURE.md  CHANGELOG.md  COMPREHENSIVE_REPORT.md  CONTRIBUTING.md  COST_SAVINGS_ANALYSIS.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT_PACKAGE.md  DOCUMENTATION_MASTER_GUIDE.md  Dockerfile  Dockerfile.dev  Dockerfile.production  Dockerfile.security  EMAIL_DISTRIBUTION_SUMMARY.md  EXECUTIVE_SUMMARY_REPORT.md  FIGMA_API_KEY=your_actual_figma_api_key_.txt  FIGMA_MCP_INSTALLATION.md  GOOGLE_WORKSPACE_MCP_SETUP.md  JSON_FIX_SUMMARY.md  LICENSE  LIGHTWEIGHT_SETUP_GUIDE.md  MARKETING_DOCUMENTATION.md  MCP_INSTALLATION_SUMMARY.json  MCP_INTEGRATION_SUMMARY.md  MCP_PROXY_README.md  MCP_PROXY_STABILITY_REPORT.md  MCP_TESTING_SUMMARY.md  MIGRATION-CHECKLIST.md  (+1122 more)
.github/: dependabot.yml  pull_request_template.md
PRD/: NEXUS_IDE.md
admin/: README.md  enhanced-styles.js  index.html
admin-dashboard/: admin-server.js  package.json
auth-system/: auth-server.js
awesome-ui-app/: index.html  package-lock.json  package.json  tailwind.config.js
billing-system/: billing-server.js
comdee-ide/: # Copilot Instructions for `git-memory-m.txt  ADVANCED_MCP_AI_STRATEGIES.md  CHANGELOG.md  README.md  package.json  (+4 more)
sdks/python/: pyproject.toml  setup.py
sdks/python/git_memory_mcp_sdk/: __init__.py  api.py  auth.py  sdk.py
sdks/python/mcp_sdk/: __init__.py
(+3155 files in other folders)
